fixes bug 243498 "nsStandardURL::BuildNormalizedSpec spends too much time in nsIDNService::IsACE" r+sr=bzbarsky